# ansible-freifunk-gateways

./: gw-monitroing.yml  gw-playbook.yml  hosts.yml  pyproject.toml  requirements.yml
collections/ansible_collections/freifunk_potsdam/gluon/roles/batman_adv/: README.md
collections/ansible_collections/freifunk_potsdam/gluon/roles/batman_adv/templates/: 50-brX.network.j2
collections/ansible_collections/freifunk_potsdam/gluon/roles/bind_server/templates/: named.conf.options.j2
collections/ansible_collections/freifunk_potsdam/gluon/roles/fastd_server/templates/: fastd.conf.j2
collections/ansible_collections/freifunk_potsdam/gluon/roles/gw2gw_l2tp/templates/: 55-l2tp.netdev.j2
collections/ansible_collections/freifunk_potsdam/gluon/roles/isc_dhcp_server/tasks/: main.yml
collections/ansible_collections/freifunk_potsdam/gluon/roles/route64_tunnel/: README.md
collections/ansible_collections/freifunk_potsdam/gluon/roles/route64_tunnel/defaults/: main.yml
collections/ansible_collections/freifunk_potsdam/gluon/roles/route64_tunnel/handlers/: main.yml
collections/ansible_collections/freifunk_potsdam/gluon/roles/route64_tunnel/meta/: main.yml
collections/ansible_collections/freifunk_potsdam/gluon/roles/route64_tunnel/tasks/: main.yml
collections/ansible_collections/freifunk_potsdam/gluon/roles/route64_tunnel/templates/: route64-wg-client.netdev.j2  route64-wg-client.network.j2
group_vars/all/: domains.yml  users.yml
host_vars/gw1/: domains.yml  route64_tunnel.yml  wireguard_client.yml
host_vars/gw3/: wireguard_client.yml
(+4 files in other folders)
